# gitgrab

./: .gitignore  Cargo.toml  README.md  index.css  index.html  license  package-lock.json
.github/: dependabot.yml
.github/workflows/: action.yml  build.yml  clippy-ng.yml  fmt.yml  main.yml  nightly_lints.yml  release.yml  rust.yml  rust_toolchain.yml
src/: compare.rs  get_detailed_view.rs  get_full_view.rs  github_logo_ascii.rs  input.rs  language_bar.rs  lines_of_codes.rs  main.rs  main_formatter.rs  profile_header.rs
src/ascii_art/: github.txt  github2.txt
src/github_graphql/: detailed_view.rs  query.graphql
src/graph/: graph_maker.rs  query.graphql  schema.graphql
src/input/: menu_cli.rs  mod.rs
