[package]
name = "gitgrab"
version = "0.2.3"
edition = "2021"
authors = ["ArshErgon", "arshergon@gmail.com", "https://www.linkedin.com/in/arsh-ergon/"]
license = "MIT OR Apache-2.0"
description = "A tool which shows github information on terminal"
readme = "README.md"
homepage = "https://github.com/ArshErgon/"
repository = "https://github.com/ArshErgon/"
keywords = ["cli", "search", "github", "open-source", "contributors"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.69"
cfonts = "1.1.0"
clap = "4.1.8"
colorful = "0.2.2"
crossterm = "0.26.1"
dialoguer = "0.10.3"
dirs = "5.0.0"
graphql_client = { version = "0.12.0", features = ["reqwest-blocking"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
term-table = "1.3.2"
